--- a/docs/高程笔记/13.事件/13.事件.md
+++ b/docs/高程笔记/13.事件/13.事件.md
@@ -519,3 +519,31 @@ window.addEventListener('MozOrientation',function(event){
 
 - `rotation` 手指变化引起的旋转角度，负值表示逆时针，正值表示顺时针
 - `scale` 手指间的距离，该值从 1 开始，距离加大则增大，距离缩小则减小
+
+### 13.5 内存和性能
+
+提升性能的方法：
+
+1. 事件委托
+2. 移除事件处理程序
+
+#### 事件委托
+
+利用事件冒泡，指定一个事件处理程序，管理一类型的事件。这种技术**占用的内存更少**。
+
+##### 适用事件
+
+例如`click`,`mousedown`,`mouseup`,`keydown`,`keyup`和`keypress`
+
+#### 移除事件处理程序
+
+1. 从文档中移除带有事件处理程序的元素之前，需要手工移除事件处理程序
+
+```javascript
+btn.onclick = function(){
+	btn.onclick = null;
+	...
+}
+```
+
+2. 页面卸载的时候，先通过 onload 事件处理程序移除所有事件处理程序
