--- a/docs/高程笔记/13.事件/13.事件.md
+++ b/docs/高程笔记/13.事件/13.事件.md
@@ -547,3 +547,70 @@ btn.onclick = function(){
 ```
 
 2. 页面卸载的时候，先通过 onload 事件处理程序移除所有事件处理程序
+
+## 13.6 模拟事件
+
+### DOM 中的事件模拟
+
+#### 创建
+
+使用`document.createEvent()`创建对象，接收要创建事件类型的字符串
+
+#### 初始化
+
+需要使用与事件有关的信息对其初始化
+
+#### 触发事件
+
+使用`dispatchEvent()`，接收一个要触发事件的 `event`对象
+
+#### 示例
+
+### 模拟鼠标事件
+
+```javascript
+var event = document.createEvent("MouseEvents");
+
+event.initMouseEvent(
+  "click",
+  true,
+  true,
+  document.defaultView,
+  0,
+  100,
+  0,
+  0,
+  0,
+  false,
+  false,
+  false,
+  false,
+  0,
+  btn2
+);
+
+btn.dispatchEvent(event);
+```
+
+### IE 中的事件模拟
+
+```
+ var event = document.createEventObject();
+
+//initialize the event object
+event.view = window;
+event.detail = 0;
+event.screenX = 100;
+event.screenY = 0;
+event.clientX = 0;
+event.clientY = 0;
+event.ctrlKey = false;
+event.altKey = false;
+event.metaKey = false;
+event.shiftKey = false;
+event.button = 0;
+event.relatedTarget = null;
+
+//fire the event
+btn.fireEvent("onclick", event);
+```
