--- a/docs/高程笔记/13.事件/13.事件.md
+++ b/docs/高程笔记/13.事件/13.事件.md
@@ -594,7 +594,7 @@ btn.dispatchEvent(event);
 
 ### IE 中的事件模拟
 
-```
+```javascript
  var event = document.createEventObject();
 
 //initialize the event object
