--- a/docs/高程笔记/14.表单.md
+++ b/docs/高程笔记/14.表单.md
@@ -71,3 +71,35 @@
    ```javascript
    form.reset();
    ```
+
+### 14.1.3 表单字段
+
+#### 1. 访问表单元素
+
+1. 通过原生 DOM 方法
+2. 通过`form`元素的`elements`属性，该属性是所有表单元素的集合，可以通过位置和`name`访问具体的元素，如果多个控件使用一个`name`属性，则返回一个 NodeList 集合。
+
+```
+var field1 = form.elements[0];
+var filed2 = form.elements['username'];
+```
+
+#### 2. 表单共性
+
+1. 共有属性，除了`<fieldset>`
+   - `type` 表单类型
+   - `value` 表单值
+   - `readOnly`是否只读
+   - `disabled` 是否禁用
+   - `name`字段名称
+   - `form`指向所属表单
+   - `tabIndex` 当前字段的切换（tab）序号
+   - `autofocus`是否自动聚焦
+2. 共有方法
+   - `focus()`激活表单字段
+   - `blur()`从元素中移走焦点
+3. 共有事件
+   除了支持鼠标，键盘，更改和 HTML 事件外，所有表单还支持一下`3`个事件
+   - `focus` 元素获得焦点时触发
+   - `blur`元素失去焦点时触发
+   - `change` 可输入表单失去焦点且`value`值变化，`select`选项改变时触发
