--- a/docs/高程笔记/14.表单.md
+++ b/docs/高程笔记/14.表单.md
@@ -103,3 +103,14 @@ var filed2 = form.elements['username'];
    - `focus` 元素获得焦点时触发
    - `blur`元素失去焦点时触发
    - `change` 可输入表单失去焦点且`value`值变化，`select`选项改变时触发
+
+### 14.2.3 选择文本
+
+#### 1.方法
+
+- `select()`选择文本框中全部文本
+- `setSelectionRange(startIndex,endIndex)`选择部分文本
+
+#### 2. 取得选择文本
+
+`selectioinStart`和`selectionEnd`
