String类型 及 Symbol 类型

--- a/docs/高程笔记/3.js语言基础.md
+++ b/docs/高程笔记/3.js语言基础.md
@@ -214,4 +214,181 @@ typeof window; //"object"
    parseInt("a30", 10); //NaN
    ```
 
-3. `parseFloat()`
+3. `parseFloat()`：尽可能将字符串转换为小数，只能解析十进制数
+
+   ```js
+   parseFloat("22.32.2"); //22.32
+   parseFloat("0xA"); //0，十六进制数值返回0
+   ```
+
+### String
+
+表示 0 或多个 16 位 Unicode 字符序列，可以用单引号 ',双引号",或反引号`包裹。
+
+```js
+let name = "John";
+let name = "John";
+let name = `John`;
+```
+
+#### `length` 属性
+
+`length` 表示的是字符串中 16 位字符的个数。
+
+```js
+"a".length; //1
+```
+
+#### 字符串转换
+
+1. `toString()`： 返回当前值的字符串等价物
+
+   ```js
+   11 .toString();   //"11"
+   true.toString();  //"true"
+   Symbol('b').toString();  //"Symbol(b)"
+   {name: "John"}.toString(); //"[object Object]"
+   null.toString();   //报错
+   undefined.toString();  //报错
+
+   //可以传入进制
+   let num = 10;
+   num.toString(2); //"1010"
+
+   ```
+
+2. `String()`：如果值有 `toString()` 方法，则优先调用，否则返回相应类型值的字符串
+
+   ```js
+   String(10); //"10"
+   String(false); //"false"
+   String(null); //"null"
+   String(undefined); //"undefined"
+   String(Symbol("b")); //"Symbol(b)"
+   String({ a: "A" }); //"[object Object]"
+   ```
+
+#### 模板字面量
+
+可以保留字面量内部的换行，可以跨行定义字符串。通常，多用于定义 `HTML` 模板。
+
+```js
+let myMultiLineTemplateLiteral = `Hello
+World`; //等同于 "Hello\nWorld"
+
+myMultiLineTemplateLiteral.length; //11
+
+let pageHTML = `  
+<div> 
+  <a href="#"> 
+    <span>Jake</span> 
+  </a> 
+</div>`;
+```
+
+#### 字符串插值
+
+在模板字面量中`${}`内使用一个 js 表达式，包括函数调用。所有插入的值都使用 `toString()`转型为字符串。
+
+```js
+//插入普通表达式
+`2 add 3 equals ${2 + 3}`; //"2 add 3 equals 5"
+
+//在模板字面量中插入函数调用
+let person = {
+  name: "John",
+  sayHi() {
+    console.log(`I am ${this.name}`);
+  },
+};
+
+console.log(`Hello! ${person.sayHi()}`);
+```
+
+#### 模板字面量标签函数
+
+标签函数与常规函数无异，通过 **前缀到模板字面量** 来应用。标签函数接收到的参数依次是原始字符串数组和对每个表达式求值的结果。返回值是对模板字面量求值得到的字符串。对于有 n 个插值的模板字面量，传递给标签函数的第一个参数包含的字符串个数为 n+1 ,传递给标签函数的表达式参数的个数是 n.
+
+```js
+let student = {
+  num: "10086",
+  name: "John",
+  age: 18,
+};
+
+let message = `num: ${student.num} 
+  name:${student.name},
+  and after one year, his age is ${student.age + 1}`;
+
+function exampleTag(strings, ...expressions) {
+  console.log("strings:", strings, "\n");
+  console.log("expressions:", expressions);
+  return "exampleTag";
+}
+
+let tagMessage = exampleTag`num: ${student.num} name:${
+  student.name
+},and after one year, his age is ${student.age + 1}`;
+
+//strings: ["num: ", " name:", ",and after one year, his age is ", ""]
+//expression:["10086", "John", 19]
+
+console.log(tagMessage); //"exampleTag"
+```
+
+#### 模板字面量原始字符串
+
+1. 可以使用默认的 `String.raw` 标签函数获取原始的模板字面量内容，如换行符或 Unicode 字符。
+
+   ```js
+   String.raw`a\tb`; //"a\tb"
+   `a\tb`; //"a	b"
+   ```
+
+2. 通过标签函数的第一个参数，即字符串数组的 `.raw`属性来获取
+
+### `Symbol`
+
+#### 创建实例
+
+`Symbol`用于创建唯一的符号，用作非字符串的对象属性。
+
+```js
+let sym = Symbol();
+```
+
+`Symbol` 实例是唯一的。
+
+```js
+let sym1 = Symbol("foo");
+let sym2 = Symbol("foo");
+
+sym1 === sym2; //false
+```
+
+`Symbol`不能使用 `new` 关键字作为构造函数使用。
+
+```js
+let mySymbol = new Symbol(); // TypeError: Symbol is not a constructor
+```
+
+#### 全局注册
+
+为了实现共享和重用实例，可以使用 `Symbol.for()` 全局注册。
+
+```
+let globalSymbol = Symbol.for('foo');
+let anotherGlobalSymbol = Symbol.for('foo'); //重用该实例
+
+globalSymbol === anotherGlobalSymbol ;  //true
+```
+
+使用 `Symbol.keyFor()` 查询全局注册表，接收 `Symbol` 实例，返回对应的字符串值。如果不是全局符号，返回 `undefined`。
+
+```
+let s = Symbol.for("global"); //"global"
+Symbol.keyFor(s);
+
+let s2 = Symbol("foo");
+Symbol.keyFor(s2);  //undefined
+```
