--- a/docs/高程笔记/3.js语言基础.md
+++ b/docs/高程笔记/3.js语言基础.md
@@ -376,19 +376,292 @@ let mySymbol = new Symbol(); // TypeError: Symbol is not a constructor
 
 为了实现共享和重用实例，可以使用 `Symbol.for()` 全局注册。
 
-```
-let globalSymbol = Symbol.for('foo');
-let anotherGlobalSymbol = Symbol.for('foo'); //重用该实例
+```js
+let globalSymbol = Symbol.for("foo");
+let anotherGlobalSymbol = Symbol.for("foo"); //重用该实例
 
-globalSymbol === anotherGlobalSymbol ;  //true
+globalSymbol === anotherGlobalSymbol; //true
 ```
 
 使用 `Symbol.keyFor()` 查询全局注册表，接收 `Symbol` 实例，返回对应的字符串值。如果不是全局符号，返回 `undefined`。
 
-```
+```js
 let s = Symbol.for("global"); //"global"
 Symbol.keyFor(s);
 
 let s2 = Symbol("foo");
-Symbol.keyFor(s2);  //undefined
+Symbol.keyFor(s2); //undefined
 ```
+
+#### `Symbol` 实例作为属性
+
+`Symbol` 实例可以作为对象属性。
+
+```js
+let s1 = Symbol("foo");
+let s2 = Symbol("bar");
+let s3 = Symbol("baz");
+let s4 = Symbol("qux");
+
+//在计算属性中使用
+let o = {};
+o[s1] = "foo val";
+console.log(o); //{Symbol(foo): "foo val"}
+
+//在Object.defineProperty 中使用
+Object.defineProperty(o, s2, { value: "bar value" });
+console.log(o); //{Symbol(foo): "foo val", Symbol(bar): "bar value"}
+
+// 在Object.defineProperties() 中使用
+Object.defineProperties(o, {
+  [s3]: { value: "s3 value" },
+  [s4]: { value: "s4 value" },
+});
+console.log(o); //{Symbol(foo): "foo val", Symbol(bar): "bar value", Symbol(baz): "s3 value", Symbol(qux): "s4 value"}
+```
+
+#### 常用内置符号
+
+内置符号用于暴露语言内部行为，开发者可以直接 **访问**、**重写**或 **模拟** 这些行为。内置符号都以 `Symbol` 属性存在。
+
+1. `for-of`循环在相关对象上使用了 **`Symbol.iterator`**行为。在自定义对象上重新定义 `Symbol.iterator` 可以改变 `for-of`在迭代该对象时的行为。
+
+2. `for-await-of`在相关对象上使用了 **`Symbol.asyncIterator`**行为。
+
+3. `instanceof` 使用了 **`Symbol.hasInstance`**的行为，可以通过在自定义对象上重新定义 `Symbol.hasInstance` 改变 `instanceof` 的行为。
+
+   ```js
+   //instanceof 和 Symbol.hasInsance 的关系
+   function Foo() {}
+   let f = new Foo();
+
+   console.log(f instanceof Foo); //true
+   console.log(Foo[Symbol.hasInstance](f)); //true
+
+   //重新定义 Symbol.hasInstance 以改变instanceof 的行为
+   class Bar {}
+   class Baz extends Bar {
+     static [Symbol.hasInstance]() {
+       return false;
+     }
+   }
+
+   let b = new Baz();
+   console.log(b instanceof Bar); //true
+   console.log(b instanceof Baz); //false
+   console.log(Bar[Symbol.hasInstance](b)); //true
+   console.log(Baz[Symbol.hasInstance](b)); //false
+   ```
+
+4. `Array.prototype.concat()` 使用了**`Symbol.isConcatSpreadable`** 的值。数组对象默认情况下会被打平到已有的数组，如果是假值则追加到数组末尾。类数组对象默认被追加到数组末尾，`true` 或 真值会将类数组对象打平到已有数组。其他非类数组对象的数字在 `Symbol.isConcatSpreadable` 被设置为 `true` 的情况下将被忽略。
+
+```js
+let initial = ["foo"];
+
+//数组的Symbol.isConcatSpreadable
+let array = ["bar"];
+console.log(array[Symbol.isConcatSpreadable]); //undefined
+console.log(initial.concat(array)); //["foo", "bar"]
+
+array[Symbol.isConcatSpreadable] = false;
+console.log(initial.concat(array)); //["foo", Array(1)]
+
+////类数组对象的Symbol.isConcatSpreadable
+let arrayLikeObject = { length: 1, 0: "baz" };
+console.log(arrayLikeObject[Symbol.isConcatSpreadable]);
+console.log(initial.concat(arrayLikeObject)); //["foo", {…}]
+
+arrayLikeObject[Symbol.isConcatSpreadable] = true;
+console.log(initial.concat(arrayLikeObject)); //["foo", "baz"]
+```
+
+5. **`Symbol.match`** 表示一个正则表达式方法，该方法用正则表达式去匹配字符串。由 `String.prorotype.match()` 方法使用该函数对正则表达式求值。传入的表达式值会被转换为 `RegExp` 对象。
+
+6. **`Symbol.replace`** 表示一个正则表达式方法，该方法替换一个字符串中匹配的子串。由 `String.prototype.replace()` 方法使用。
+
+7. **`Symbol.search`** 表示一个正则表达式方法，返回字符串中匹配正则表达式的索引。由 `String.prototype.search()` 方法使用。
+
+8. **`Symbol.species`** 表示一个函数值，该函数作为创建派生对象的构造函数。
+
+9. **`Symbol.split`** 表示在匹配正则表达式的索引位置拆分字符串，由 `String.prototype.split()`使用。
+
+10. **`Symbol.toPrimitive`** 将对象转换为相应的原始值的方法，由 `ToPrimitive`操作使用。
+
+    ```js
+    class Bar {
+      constructor() {
+        this[Symbol.toPrimitive] = function (hint) {
+          switch (hint) {
+            case "number":
+              return 3;
+            case "string":
+              return "string bar";
+            case "default":
+            default:
+              return "default bar";
+          }
+        };
+      }
+    }
+
+    let bar = new Bar();
+
+    console.log(3 + bar); //3default bar
+    //减法将对象转换成为数字
+    console.log(3 - bar); //0
+    console.log(String(bar)); //string bar
+    ```
+
+11. **`String.toStringTag`**一个字符串，该字符串用于创建对象的默认字符串描述。由内置方法 `Object.prototype.toString()`使用。
+
+    ```js
+    class Bar {
+      constructor() {
+        this[Symbol.toStringTag] = "Bar";
+      }
+    }
+
+    let bar = new Bar();
+    console.log(bar); //Bar {Symbol(Symbol.toStringTag): "Bar"}
+    console.log(bar.toString()); //[object Bar]
+    console.log(bar[Symbol.toStringTag]); //Bar
+    ```
+
+12. **`String.unscopables`** 一个对象，该对象所有的以及继承属性都会从关联对象的 `with`环境绑定中排除。
+
+    ```js
+    let f = { foo: "bar" };
+    with (f) {
+      console.log(foo); //"bar"
+    }
+
+    f[Symbol.unscopables] = {
+      foo: true,
+    };
+
+    with (f) {
+      console.log(foo); //ReferenceError
+    }
+    ```
+
+### Object
+
+对象可以看做一组无序键值对的集合。可以通过 `new` 来创建。`Object`是所有其他对象的基类。
+
+#### 属性和方法
+
+- `constructor` 构造函数
+
+- `hasOwnProperty(propertyName)` 判断当前对象是否有给定属性
+
+- `isPrototypeOf(object)` 判断当前对象是否另一个对象的原型
+
+- `propertyIsEnumerable` 属性是否可以枚举
+
+- `toLocalString()` 返回对象的字符串表示，该字符串反映对象所在的本地化执行环境。
+
+  ```js
+  new Date().toLocalString(); //"2021/2/5上午9:12:31"
+  ```
+
+- `toString()` 返回对象的字符串表示。
+
+  ```js
+  new Date().toString(); //"Fri Feb 05 2021 09:12:03 GMT+0800 (中国标准时间)"
+  ```
+
+- `valueOf()` 返回对象对应的字符串，数值或布尔值表示。通常与 `toString` 的返回值相同。
+
+## 操作符
+
+操作符可以根据操作数个数分为 **一元操作符**，**二元操作符**，**三元操作符**。
+
+### 一元操作符
+
+#### 自增、自减
+
+`自增、自减操作符`：可以放在变量的前面或者后面，称之为前缀版和后缀版。二者的区别在于前缀版先修改要操作变量的值，然后进行其他操作。后缀版先使用要操作变量当前的值，后修改变量的值。
+
+- `++`
+- `--`
+
+```js
+let a = 1;
+let b = 1;
+
+console.log(a++, a); //1 2
+console.log(++a, a); //2 2
+```
+
+如果值为数字，执行。如果值为其他类型，将其自动转换为对应的数值类型再进行递增或递减。
+
+```js
+let s1 = "1";
+let s2 = "a";
+let b = false;
+let o = {
+  valueOf() {
+    return 1;
+  },
+};
+
+s1++; //值变成了数值2
+s2++; //值变成了NaN
+b++; //值变成了1
+o++; //值变成了2
+```
+
+#### 一元加和减
+
+一元加： 对于数值型变量，一元加对其没有影响。对于非数值型变量，一元加执行与 `Number()` 转型函数一样的类型转换。由此，`Number`类型的数值转换也可以通过一元加操作符实现。
+
+一元减：对于数值型变量，一元减将其变为对应负值。对于非数值型变量，一元减先将其转换为对相应的数值，然后再取负值。
+
+### 位操作符
+
+位操作用于数值的底层操作，如果应用到非数值，那么首先会自动按照`Number()`转换规则将其转换为数值，然后进行位操作。
+
+#### 按位非`~`
+
+`~` 相当于对数值取反并减 1。
+
+```js
+let num1 = 25;
+let num2 = ~num1;
+console.log(num2); //-26
+```
+
+#### 按位与 `&`
+
+`&` 就是与，将两个操作数的每一个位对齐，执行相应的与操作。每一位上，如果两个位都是 1 则返回 1，否则返回 0。
+
+#### 按位或 `|`
+
+`|`同样将两个操作数的每一位对齐，执行相应的或操作。至少一位是 1 则返回 1，否则返回 0。
+
+#### 按位异或 `^`
+
+异或只在只有一位是 1 的时候返回 1。
+
+#### 左移 `<<`
+
+按照指定的位数将数值的所有位向左移动，末位补 0。向左移 n 位，在计算上，相当于乘以 2 的 n 次方。
+
+```js
+3 << 2; //12
+```
+
+#### 右移 `>>`
+
+按照指定的位数将数值的所有位向右移动，左侧出现的空位用符号位的值来填充。右移是左移的逆运算。
+
+#### 无符号右移 `>>`
+
+按照指定的位数将数值的所有位向右移动，左侧出现的空位用 0 来填充。
+
+### 布尔操作符
+
+- 逻辑非 `!`：将操作数转换为布尔值，然后取反。通常可以利用 `!!` 将操作数转为布尔型。
+
+- 逻辑与 `&&`：根据
+- 逻辑或 `||`
