--- a/docs/高程笔记/3.js语言基础.md
+++ b/docs/高程笔记/3.js语言基础.md
@@ -663,5 +663,226 @@ console.log(num2); //-26
 
 - 逻辑非 `!`：将操作数转换为布尔值，然后取反。通常可以利用 `!!` 将操作数转为布尔型。
 
-- 逻辑与 `&&`：根据
-- 逻辑或 `||`
+  ```js
+  console.log(!!0); //false
+  ```
+
+- 逻辑与 `&&`：如果第一个操作数为真值，则返回第二个操作数。如果第一个操作数为假值，则跳过对第二个操作数求值，直接返回第一个操作数。
+
+- 逻辑或 `||`：如果第一个操作数为真值，则跳过对第二个操作数求值，直接返回第一个操作数。如果第一个操作数为假值，则返回第二个操作数。
+
+  ```js
+  let obj = preferredObject || {}; //给变量赋值
+  ```
+
+`&&`和 `||`都是短路逻辑运算，也就是如果能够凭借第一个操作数求得结果，则不对第二个操作数求值。
+
+### 乘性操作符
+
+乘性操作符都是用于数值运算，如果操作数有非数值，后台使用 `Number()`将其进行自动类型转换。
+
+- 乘法 `*`
+
+  ```js
+  Infinity * Infinity; //Infinity
+  Infinity * 0; //NaN
+  ```
+
+- 除法 `/`
+
+  ```js
+  Infinity / Infinity; //NaN
+
+  0 / 0; //NaN
+
+  1 / 0; //Infinity
+
+  -1 / 0; //-Infinity
+  ```
+
+- 取模 `%`
+
+  ```js
+  Infinity % 2; //NaN
+  1 % 0; //NaN
+  Infinity % Infinity;
+  1 % Infinity; //1
+  0 % Infinity; //0
+  ```
+
+### 指数操作符
+
+- `**`， 等同于 `Math.pow()`进行指数操作。
+
+```js
+Math.pow(3, 2); //9;
+3 ** 2; //9
+```
+
+- `**=` 指数赋值运算符
+
+```js
+let a = 3;
+a **= 2;
+console.log(a); //9
+```
+
+### 加性操作符
+
+- 加法操作符 `+`，可以用于求两数之和或者连接字符串。如果两个操作数都是数值或可以自动转型为数值，则求两数之和，如果其中一个操作数为字符串，则用于拼接字符串。对于其他类型，调用 `toString()`方法将操作数先转为字符串再进行运算。
+
+  ```js
+  3 + 5; //8
+  3 + null; //3
+
+  3 + "5"; //"35"
+  ```
+
+- 减法操作符 `-`，用于求两数之差。
+
+### 关系操作符
+
+关系操作符根据操作数的比较返回布尔值。
+
+- `<`
+
+- `>`
+
+- `>=`
+
+- `<=`
+
+#### 比较规则
+
+1. 数值进行数值比较
+2. 字符串比较对应编码
+3. 任一操作数是数值，转为数值比较
+4. 任一操作数是对象，调用 `valueOf()` 转为数值比较。如果没有，则调用 `toString()`转为字符串比较
+5. 布尔值转为数值比较
+
+```js
+"23" < 3; //false
+"23" < "3"; //true
+
+//NaN 和任何数的比较操作都返回false
+NaN < 3; //false
+NaN >= 3; //false
+```
+
+### 相等操作符
+
+- 等于`==`
+- 不等于`!=`
+- 全等 `===`
+- 不全等 `!==`
+
+等于和不等于在进行比较前，先会进行强制类型转换。而全等和不全等则不进行转换直接比较。
+
+### 条件操作符
+
+条件操作符属于三元操作符。
+
+```js
+let max = a > b ? a : b;
+```
+
+### 赋值操作符
+
+- 简单赋值
+  - `=` 用于将右边的值赋值给左边的变量
+- 复合赋值，是常见赋值操作的简写
+
+### 逗号操作符
+
+用于在一条语句中执行多个操作，常用于声明多个变量。
+
+```js
+//声明多个变量
+let a = 1,
+  b = 2,
+  c = 3;
+//辅助赋值
+let num = (1, 2, 3, 4, 5); //返回表达式中最后一个值
+console.log(num); //1
+```
+
+## 语句
+
+- `if` 语句，条件语句
+
+- `do while`语句
+
+- `while` 语句
+
+- `for` 语句
+
+- `for-in` 语句，是一种严格的迭代语句，用于枚举对象中的非符号键属性。返回顺序不一定
+
+  ```js
+  for (const prop in window) {
+    console.log(prop);
+  }
+  ```
+
+- `for-of` 是一种严格的迭代语句，用于遍历可迭代对象中的元素。该语句按照可迭代对象的 `next()`方法产生值的顺序迭代元素。如果尝试迭代的对象不支持迭代，则抛出错误。
+
+  ```js
+  //抛出错误，window 对象不可迭代
+  for (const value of window) {
+  }
+
+  //正确使用
+  for (const elem of [1, 2, 3, 4]) {
+    console.log(elem); //依次输出1,2,3,4
+  }
+  ```
+
+- 标签语句，用于给语句加标签
+
+  ```js
+  start: for (let i = 0; i < 10; i++) {}
+  ```
+
+- `break` 和 `continue`语句用于控制循环，`break` 用于立即退出循环，执行循环后的下一条语句。`continue` 退出本次循环，执行下一次循环。与 `label`结合可以实现跳出特定的循环。
+
+- `with`语句，用于将代码作用域设置为指定的对象
+
+  ```js
+  with (location) {
+    const qs = search.substring(1);
+    const host = hostname;
+    const url = href;
+
+    console.log(qs, host, url);
+  }
+  ```
+
+- `switch-case` 语句
+
+  - ECMAScript 中 `switch`语句可以用于所有数据类型，也可以是变量或表达式。
+
+  - `switch`语句在比较时使用全等
+
+    ```js
+    let num = 10;
+    switch (num) {
+      case 10:
+        console.log("num:" + num);
+        break;
+      case "10":
+        console.log("string : 10");
+        break;
+
+      default:
+        console.log("other");
+        break;
+    }
+    //num: 10
+    ```
+
+## 函数
+
+### 与其他语言函数的不同
+
+- 不需要指定函数返回值，函数在任何时候可以返回任何值。
+- 不指定返回值的函数实际上会返回 `undefined`
