--- a/docs/高程笔记/五、引用类型.md
+++ b/docs/高程笔记/五、引用类型.md
@@ -19,7 +19,7 @@
 
    ```javascript
    var perosn = {
-     name: "me"
+     name: "me",
    };
    ```
 
@@ -55,24 +55,22 @@
 
   > 如果数组中包含`null`或`undefined`，在上述方法的返回结构中用`空字符串`表示。
 
- <br>
-+ 栈
-	<br>
-	`栈`是一种**后进先出**的数据结构，栈中项的推入和弹出都发生在栈的顶部。
-	<br>
-	方法：
-	+ `push()`：接收任意数量的参数，把它们逐个添加到元素末尾，并返回修改后数组的长度。
-	+ `pop()`：从数组的末位移除最后一项，并返回并移除的元素。
-+ 队列
-	<br>
-	`队列`:`先进先出`的数据结构。在列表的末位添加项，从列表的前端移除项。
-<br>
-	模拟队列：使用`push()`和`shift()`
-	反向模拟队列：使用`unshift()`和`pop()`
-<br>
-	方法：
-	+ `shift()`:移除数组的第一项并返回该元素。
-	+ `unshift()`:在数组的前端添加任意个项并返回新元素长度。
+* 栈
+  `栈`是一种**后进先出**的数据结构，栈中项的推入和弹出都发生在栈的顶部。
+
+  方法：
+
+  - `push()`：接收任意数量的参数，把它们逐个添加到元素末尾，并返回修改后数组的长度。
+  - `pop()`：从数组的末位移除最后一项，并返回并移除的元素。
+
+* 队列
+  <br>
+  `队列`:`先进先出`的数据结构。在列表的末位添加项，从列表的前端移除项。
+  <br>
+  模拟队列：使用`push()`和`shift()`
+  反向模拟队列：使用`unshift()`和`pop()`
+  <br>
+  方法： + `shift()`:移除数组的第一项并返回该元素。 + `unshift()`:在数组的前端添加任意个项并返回新元素长度。
 
 <br>
 
@@ -123,20 +121,28 @@
 
 ### 基本概念
 
+`JavaScript` 中的正则表达式继承自 Perl 语言，但是缺少一些高级特性。正则表达式由 `模式` 和 `标志`两部分组成。
+
+```javascript
+var pattern = /模式/志标;
+```
+
 **模式(`pattern`)**：可以是任何简单或复杂的正则表达式，可以包含字符类、限定符、分组、向前查找以及反向引用。
 **_标志(`flags`)_**：标明正则表达式的行为。有以下`3`种
 
 - `g`：全局模式，即模式将应用于所有字符串
 - `i`：匹配时忽略大小写
 - `m`：表示多行模式，在到达一行末尾时会继续查找下一行。
-  <br>
+- `y`修饰符：从**lastIndex**属性开始进行搜索
+- `u`修饰符：启用 Unicode 匹配
+- `s`修饰符：dotAll 模式，表示元字符，匹配任何字符。
 
 ### 创建
 
 1. 正则表达式字面量
 
    ```javascript
-   var regexp = /pattern/falgs
+   var regexp = /pattern/afgls;
    ```
 
 2. `RegExp`构造函数，需要注意的是两个参数都接受字符串，所以第一个参数必须经过双重转义
@@ -151,16 +157,29 @@
 
 - `global`：布尔值，是否设置`g`标志
 - `ingorecase`：布尔值，是否设置`i`标志
-- `lastIndex`:整数，下一个搜索项的起始位置
+- `unicode` 是否设置了 u 标志
+- `sticky` 是否设置了 y 标志
 - `multiline`:布尔值，是否设置`m`标志
+- `dotAlll` 是否设置了 s 标记
+- `lastIndex`:整数，下一个搜索项的起始位置
 - `source`: 正则表达式的字符串表示，按照字面量形式传入，而不是经过转义的字符串模式。
+- `flags` 正则表达式的标记字符串
 
 ### 方法
 
 正则表达式拥有以下实例方法：
 
-- `exec()` + **参数**：应用模式的字符串 + **_返回_**：第一个匹配项信息的数组，没有匹配项则返回`null`
+- `exec()` 方法，接收要匹配的字符串，返回第一个匹配项信息的数组，没有匹配项则返回 `null`
 - `test()`：接收字符串参数，匹配则返回`true`,否则返回`false`
+
+### 静态属性
+
+- `input` 原始的字符串
+- `leftContext` 出现在上次匹配左边的文本
+- `rightContext` 上次匹配右边的文本
+- `lastMatch` 最后匹配的文本
+- `lastParen` 最后匹配的捕获组
+- `$1-$9` 第 1-9 个捕获组的匹配项
 
 ## 5.5 `Function`类型
 
@@ -177,7 +196,7 @@
 2. 函数表达式
 
    ```javascript
-   var sum = function(num1, num2) {
+   var sum = function (num1, num2) {
      return num1 + num2;
    };
    ```
@@ -283,7 +302,8 @@
 
 包括：`Boolean`、`Number`和`String`。每当读取一个基本类型的值，就会创建一个对应的基本包装类型的对象。
 <br>
-**创建**：(2 种)
+
+### **创建**：(2 种)
 
 - 使用`new`操作符和对应的构造函数
 - 使用`Object`构造函数传入对应的值，比如想要创建一个`Boolean`包装类型对象，就传入`true`或者`false`作为参数。
@@ -291,9 +311,16 @@
 **引用类型和基本包装类型的主要区别**：对象的生存期。使用`new`创建的引用类型的实例，在执行流离开当前作用域之前一直保存在内存中。而自动创建的基本包装类型对象，则存在于代码执行的瞬间，然后立即被销毁。
 <br>
 **基本类型和引用类型的主要区别：** 操作符返回结果不一致，`typeof`对基本类型值返回其相应的基本类型，而对引用类型返回`object`。同样地，`instanceof`操作符也所区别。
-<br>
 
-## `Boolean`类型
+```js
+let num = 2;
+console.log(typeof num); //"number"
+
+let obj = new Number(2);
+console.log(typeof obj); //"object"
+```
+
+### `Boolean`类型
 
 特殊示例：
 
@@ -302,15 +329,48 @@
 
 出现上述情况的**原因**是：所有引用类型，包括基本包装类型都会被转换为`true`。
 
-## `Number`类型
+### `Number`类型
 
-**格式化为字符串**：
+#### 重写的方法
 
-- `toFixed()`：根据四舍五入的规则按照指定的小数位返回数值的字符串表示
-- `toExponential()`：返回指定小数位数的`e`表示法
-- `toPrecision()`：接收一个表示所有位数的位数，根据要处理的数值来决定调用`toFixed()`或者`toExponential()`
+- `toString()` 返回数值字符串，可以接收一个表示技术的参数，返回对应基数形式的字符串。
 
-## `String`类型
+  ```js
+  let num = 10;
+  console.log(num.toString()); //"10"
+  console.log(num.toString(2)); //"1010"
+  console.log(num.toString(8)); //"12"
+  console.log(num.toString(16)); //"a"
+  ```
+
+- `toLocalString()` 直接返回数值字符串。
+
+- `valueOf()` 返回原始数值
+
+  ```js
+  let num = new Number(10);
+  console.log(num.valueOf()); //10
+  ```
+
+#### **格式化为字符串**
+
+- `toFixed()` 按照四舍五入规则返回**指定小数位数**的数值字符串。
+
+  ```js
+  let num = 10.005;
+  console.log(num.toFixed(2)); //"10.01"
+  ```
+
+- `toExponential()` 返回**指定小数位数**的`e`表示法。
+
+  ```js
+  let num = 10.05;
+  console.log(num.toExponential(2)); //"1.01e+1"
+  ```
+
+- `toPrecision()` 接收一个表示所有位数的位数，根据要处理的数值来决定调用`toFixed()`或者`toExponential()`
+
+### `String`类型
 
 方法：
 
@@ -356,7 +416,7 @@
 在 web 浏览器中，将全局对象作为`window`对象的一部分加以实现。可以通过以下代码取得`global`对象：
 
 ```javascript
-var global = (function() {
+var global = (function () {
   return this;
 })();
 ```
