--- a/docs/高程笔记/五、引用类型.md
+++ b/docs/高程笔记/五、引用类型.md
@@ -55,29 +55,29 @@
 
   > 如果数组中包含`null`或`undefined`，在上述方法的返回结构中用`空字符串`表示。
 
-* 栈
-  `栈`是一种**后进先出**的数据结构，栈中项的推入和弹出都发生在栈的顶部。
+### 栈
 
-  方法：
+`栈`是一种**后进先出**的数据结构，栈中项的推入和弹出都发生在栈的顶部。
 
-  - `push()`：接收任意数量的参数，把它们逐个添加到元素末尾，并返回修改后数组的长度。
-  - `pop()`：从数组的末位移除最后一项，并返回并移除的元素。
+方法：
 
-* 队列
-  <br>
-  `队列`:`先进先出`的数据结构。在列表的末位添加项，从列表的前端移除项。
-  <br>
-  模拟队列：使用`push()`和`shift()`
-  反向模拟队列：使用`unshift()`和`pop()`
-  <br>
-  方法： + `shift()`:移除数组的第一项并返回该元素。 + `unshift()`:在数组的前端添加任意个项并返回新元素长度。
+- `push()`：接收任意数量的参数，把它们逐个添加到元素末尾，并返回修改后数组的长度。
+- `pop()`：从数组的末位移除最后一项，并返回并移除的元素。
 
-<br>
+### 队列
+
+`队列`:`先进先出`的数据结构。在列表的末位添加项，从列表的前端移除项。
+模拟队列：使用`push()`和`shift()`
+反向模拟队列：使用`unshift()`和`pop()`
+方法：
+
+- `shift()`:移除数组的第一项并返回该元素。
+- `unshift()`:在数组的前端添加任意个项并返回新元素长度。
 
 - 重排序
 
-      	+ `reverse()`：反转数组项的顺序
-      	+ `sort()`:将数组元素进行排序，默认比较每个数组项的字符串编码进行升序排序。可以传入比较函数作为参数，比较函数接受两个参数，如果第一个参数应该位于第二个参数之前，返回负数。如果二者相等，返回0，如果第一个参数应该位于第二个参数之后，返回正数。
+  - `reverse()`：反转数组项的顺序
+  - `sort()`:将数组元素进行排序，默认比较每个数组项的字符串编码进行升序排序。可以传入比较函数作为参数，比较函数接受两个参数，如果第一个参数应该位于第二个参数之前，返回负数。如果二者相等，返回 0，如果第一个参数应该位于第二个参数之后，返回正数。
 
 - 操作
 
@@ -225,64 +225,78 @@ var pattern = /模式/志标;
 - `arguments` + `arguments` 类数组对象，包含传入函数的所有参数 + `arguments`中存在一个`callee`属性，该对象是一个指针，指向拥有这个`arguments`对象的函数
 - `this` 指向函数执行的环境对象，有以下情况：
 
-      	+ 作为全局函数或普通函数调用，`this`指向全局对象，在浏览器环境中，`this`指向`window`，在`node`环境中，`this`指向`global`
-      		``` javascript
-      		function foo() {
-      		  console.log(this);  //window 或 global
-      		}
-      		```
+  - 作为全局函数或普通函数调用，`this`指向全局对象，在浏览器环境中，`this`指向`window`，在`node`环境中，`this`指向`global`
 
-      	+ 作为对象的方法调用时，`this`指向该对象
-      		``` javascript
-      		var obj = {
-      		  name: "object",
-      		  getName() {
-      		    console.log(this);  // 指向obj
-      		  }
-      		};
-      		```
+  ```javascript
+  function foo() {
+    console.log(this); //window 或 global
+  }
+  ```
 
-      	+ 作为构造函数调用时，`this`指向新构造的函数
-      		``` javascript
-      		function Person(name){
-      		  this.name = name;
-      		  console.log(this);  //Person { name: 'lily' }
-      		}
-      		new Person('lily');
-      		```
+  - 作为对象的方法调用时，`this`指向该对象
 
-      	+ 通过`call`,`apply`调用时，`this`指向调用时传入的参数`this`
-      		``` javascript
-      		var obj = {
-      		  name: "obj",
-      		  getName() {
-      		    console.log(this.name);
-      		  }
-      		};
-      		var temp = {
-      		  name: "temp"
-      		};
-      		obj.getName.call(temp);  // 'temp'
-      		```
+  ```javascript
+  var obj = {
+    name: "object",
+    getName() {
+      console.log(this); // 指向obj
+    },
+  };
+  ```
 
-      	+ 闭包使用时，`this`指向全局对象
-      		``` javascript
-      		var obj = {
-      		  name: "obj",
-      		  getName() {
-      		   return function(){
-      		      console.log(this);
-      		    }
-      		  }
-      		};
-      		var temp = {
-      		  name: "temp"
-      		};
-      		obj.getName()();  // "temp"
-      		```
+  - 作为构造函数调用时，`this`指向新构造的函数
+
+    ```javascript
+    function Person(name) {
+      this.name = name;
+      console.log(this); //Person { name: 'lily' }
+    }
+    new Person("lily");
+    ```
+
+    - 通过`call`,`apply`调用时，`this`指向调用时传入的参数`this`
+
+      ```javascript
+      var obj = {
+        name: "obj",
+        getName() {
+          console.log(this.name);
+        },
+      };
+      var temp = {
+        name: "temp",
+      };
+      obj.getName.call(temp); // 'temp'
+      ```
+
+  - 闭包使用时，`this`指向全局对象
+
+    ```javascript
+    var obj = {
+      name: "obj",
+      getName() {
+        return function () {
+          console.log(this);
+        };
+      },
+    };
+    var temp = {
+      name: "temp",
+    };
+    obj.getName()(); // "temp"
+    ```
 
 - `caller`属性保存调用当前函数的函数引用，如果在全局作用域中调用当前函数，它的值为`null`
-  `javascript function outer(){ inner(); } function inner(){ alert(inner.caller); } outer(); //指向outer 函数`
+
+  ```javascript
+  function outer() {
+    inner();
+  }
+  function inner() {
+    alert(inner.caller);
+  }
+  outer(); //指向outer 函数`
+  ```
 
 ## 函数属性和方法
 
@@ -324,8 +338,10 @@ console.log(typeof obj); //"object"
 
 特殊示例：
 
-    var falseObject = new Boolean(false);
-    Boolean(falseObject) == true; //true
+```javascript
+var falseObject = new Boolean(false);
+Boolean(falseObject) == true; //true
+```
 
 出现上述情况的**原因**是：所有引用类型，包括基本包装类型都会被转换为`true`。
 
@@ -372,34 +388,123 @@ console.log(typeof obj); //"object"
 
 ### `String`类型
 
-方法：
+#### 继承的方法
 
-- **访问字符** + `charAt()`：接收字符位置，返回给定位置的字符。 + `charCodeAt()`：接收字符位置，返回给定位置的字符编码 + 使用`[]`和索引来访问特定字符
-- **拼接** + `concat()`：接收任意个字符串，返回拼接后的字符串 + 使用`+`进行拼接
-- **基于子串创建新字符串** + 方法： + `slice()`：接收起始位置和结束位置 + `substr()`：接收起始位置和字符个数。 + `substring()`：起始位置和结束位置，默认将参数中较小的数作为起始位置 + 传递相同参数的不同返回 + 只传递一个参数 3 时，三个方法返回相同结果。
-  `javascript var stringValue = "hello world"; alert(stringValue.slice(3)); //"lo world" alert(stringValue.substring(3)); //"lo world" alert(stringValue.substr(3)); //"lo world"` + 指定参数 3 和 7，`slice()`和`substring()`返回相同
+`String` 类型继承自 `Object` 类型的三个方法，都返回对应的原始字符串值。
 
-      		```javascript
-      		alert(stringValue.slice(3, 7));     //"lo w"
-      		alert(stringValue.substring(3,7));  //"lo w"
-        alert(stringValue.substr(3, 7));    //"lo worl"
-      		```
-      		+ 指定参数为负数时，返回各不相同，`slice()`将负数与字符串长度相加，`substr()`将负的第一个参数加上字符串长度，将负的第二个参数转换为`0`,`substring()`将负数参数全部转换为`0`
+#### 操作字符
 
-        ```javascript
-        alert(stringValue.slice(-3));         //"rld"
-        alert(stringValue.substring(-3));     //"hello world"
-        alert(stringValue.substr(-3));        //"rld"
-        alert(stringValue.slice(3, -4));      //"lo w"
-        alert(stringValue.substring(3, -4));  //"hel"
-        alert(stringValue.substr(3, -4));     //"" (empty string)
-        ```
+- 使用`[]`和索引来访问特定字符
 
-- **位置** + `indexOf()`：从开头搜索字符串的位置 + `lastIndexOf()`:从结尾搜索字符串的位置
-- **大小写转化** + `toLowerCase()`转换为小写 + `toUpperCase()`：转换为大写
-- **模式匹配** + `match()`:本质上与调用`RegExp`的`exec()`，接受一个正则表达式，返回捕获数组 + `search()`：接受字符串或正则表达式，返回匹配项索引。 + `replace()`：第一个参数是字符串或正则表达式，第二个参数是字符串或函数，如果是字符串，则替换第一个字符串。如果是函数，在只有一个匹配项的情况下，会向函数传递 3 个参数：匹配项，当前匹配项位置，及原始字符串。如果在有多个捕获组的情况下，参数依次是模式的匹配项、第一个捕获组的匹配项、第二个捕获组匹配项...,匹配项位置及原始字符串。 + `split()`:第一个参数是字符串或正则表达式，第二个参数是指定数组大小（可选），返回基于指定分隔符分割的多个字符串组成的数组。
-- **比较**：`localCompare()`，按照字母表顺序比较字符串，小于则返回`-1`，大于返回`1`，等于返回`0`.
-- 静态方法： + `fromCharCode()`:接受一个或多个字符编码，将其转换为字符串。
+  ```js
+  let str = "abcde";
+  console.log(str[0]); //"a"
+  console.log(str.charAt(0)); //"a"
+  console.log(str.charCodeAt(0)); //97
+  ```
+
+- `charAt()` 返回给定位置的字符。
+
+  ```js
+  "abcde".charAt(2); //"c"
+  ```
+
+- `charCodeAt()` 返回给定位置的字符编码
+
+  ```js
+  "abcde".charCodeAt(2); //99
+  ```
+
+- `fromCharCode()` 接受一个或多个字符编码，将其转换为字符串。
+
+  ```js
+  String.fromCharCode(97, 98, 99); //"abc"
+  ```
+
+- `codePointAt()` 返回给定位置的字符码点，与 `charCodeAt` 不同的是，该方法既可以解析单码元字符，又可以解析代理对字符。
+
+- `fromCodePoint()` 接收任意属相的码点，返回对应字符拼接的字符串。
+
+- `normalize()`由于 Unicode 可以采取多种编码方式，此方法根据给定的形式规范化字符串。
+
+#### 拼接
+
+- `concat()`：接收任意个字符串，返回拼接后的字符串
+- 使用`+`进行拼接
+
+#### 子串
+
+- `slice()`：接收起始位置和结束位置，如果指定参数为负数，会将该负数与字符串长度相加。
+
+  ```js
+  let stringValue = "hello world";
+  ```
+
+- `substr()`：接收起始位置和字符个数。
+
+- `substring()`：起始位置和结束位置，默认将参数中较小的数作为起始位置
+
+  ```javascript
+  var stringValue = "hello world";
+  alert(stringValue.slice(3)); //"lo world"
+  alert(stringValue.substring(3)); //"lo world"
+  alert(stringValue.substr(3)); //"lo world"
+  ```
+
+- 指定参数为负数时，返回各不相同，`slice()`将负数与字符串长度相加，`substr()`将负的第一个参数加上字符串长度，将负的第二个参数转换为`0`,`substring()`将负数参数全部转换为`0`
+
+  ```js
+  alert(stringValue.slice(-3)); //"rld"
+  alert(stringValue.substring(-3)); //"hello world"
+  alert(stringValue.substr(-3)); //"rld"
+  alert(stringValue.slice(3, -4)); //"lo w"
+  alert(stringValue.substring(3, -4)); //"hel"
+  alert(stringValue.substr(3, -4)); //"" (empty string)
+  ```
+
+#### **位置**
+
+- `indexOf()`：从开头搜索字符串的位置
+- `lastIndexOf()`:从结尾搜索字符串的位置
+
+#### 字符串包含方法
+
+- `startsWith` 是否以传入的字符串开头
+- `endsWith` 是否以传入的字符串结尾
+- `includes` 是否包含传入的字符串
+
+#### 去空方法
+
+- `trim()` 去掉字符串两边的空格
+- `trimLeft()` 去掉字符串开始的空格
+- `trimRight()` 去掉字符串结尾的空格
+
+#### **大小写转化**
+
+- `toLowerCase()`转换为小写
+- `toUpperCase()`：转换为大写
+
+#### 复制
+
+- `repeat()` 将字符串复制指定的次数
+- `padStart()` 复制字符串，并用指定的字符填充到开头，直到满足指定的长度
+- `padEnd()` 复制字符串，并用指定的字符填充到结尾，直到满足指定的长度
+
+#### 迭代器
+
+- `for-of`迭代字符串
+- 使用迭代器解构
+
+#### **模式匹配**
+
+- `match()`:本质上与调用`RegExp`的`exec()`，接受一个正则表达式，返回捕获数组
+- `search()`：接受字符串或正则表达式，返回匹配项索引。
+- `replace()`：第一个参数是字符串或正则表达式，第二个参数是字符串或函数，如果是字符串，则替换第一个字符串。如果是函数，在只有一个匹配项的情况下，会向函数传递 3 个参数：匹配项，当前匹配项位置，及原始字符串。如果在有多个捕获组的情况下，参数依次是模式的匹配项、第一个捕获组的匹配项、第二个捕获组匹配项...,匹配项位置及原始字符串。
+- `split()`:第一个参数是字符串或正则表达式，第二个参数是指定数组大小（可选），返回基于指定分隔符分割的多个字符串组成的数组。
+
+#### **比较**
+
+- `localCompare()`，按照字母表顺序比较字符串，小于则返回`-1`，大于返回`1`，等于返回`0`.
 
 ## 5.7 单体内置对象（`Global`和`Math`）
 
