--- a/docs/深入理解ES6/1-4.md
+++ b/docs/深入理解ES6/1-4.md
@@ -121,7 +121,7 @@ es6 中：`arguments`对象的行为保持与 es5 严格模式保持一致。默
 
 ##### es6 中不定参数的写法：`...`
 
-##### 使用限制：
+##### 使用限制
 
 - 不定参数后不能有其他命名参数
 - 不定参数不能用于对象字面量 setter 中，原因：对象字面量 setter 的参数有且只有一个。即以下报错：
@@ -130,7 +130,7 @@ es6 中：`arguments`对象的行为保持与 es5 严格模式保持一致。默
   set name(...value)
   }
 
-##### 对`arguments`对象的影响：无论是否使用不定参数，arguments 对象总是包含所有传入函数的参数。
+##### 对`arguments`对象的影响：无论是否使用不定参数，arguments 对象总是包含所有传入函数的参数
 
 ### name 属性
 
