--- a/docs/深入理解ES6/11.Promise 异步.md
+++ b/docs/深入理解ES6/11.Promise 异步.md
@@ -82,7 +82,7 @@ p1.then(function(value){
 });
 ```
 
-## 执行器错误：如果执行器内部抛出错误，那么 Promise 的拒绝处理程序就会被调用。
+## 执行器错误：如果执行器内部抛出错误，那么 Promise 的拒绝处理程序就会被调用
 
 ```
 let promise = new Promise(function(resolve,reject){
@@ -100,6 +100,7 @@ promise.catch(function(error){
 
 - 作用：识别那些被拒绝又没有被处理的 Promise
 - 分类： + unhandleRejection 在一个事件循环中，当 Promise 被拒绝，并且没有提供拒绝处理程序时被调用 + 参数：拒绝原因及被拒绝的 Promise + 示例
+
   ```
   let rejected;
   process.on('unhandledRejection', function (reason, promise) {
@@ -157,7 +158,7 @@ p1.then(function(value){
 finish
 ```
 
-## 捕获错误：完成处理程序或拒绝处理程序中可能发生错误，而 Promise 链可以用来捕获错误。
+## 捕获错误：完成处理程序或拒绝处理程序中可能发生错误，而 Promise 链可以用来捕获错误
 
 使用：务必在 Promise 链的末尾留有一个拒绝处理程序以确保能够正确处理所有可能发生的错误。
 
