--- a/docs/深入理解ES6/8迭代器和生成器.md
+++ b/docs/深入理解ES6/8迭代器和生成器.md
@@ -4,7 +4,7 @@
 
 定义：一种特殊对象，它具有一些专门为迭代过程设计的专有接口，所有的迭代对象都有一个 next()方法，每次调用都返回一个结果对象。结果对象有两个属性：value 表示下一个将要返回的值，done 表示是否有更多数据。还保存一个内部指针，用于指向当前集合中值得位置。
 
-## 生成器：
+## 生成器
 
 定义：一种返回迭代器的函数，通过`funciton`关键字后的星号（\*）来表示，函数中会用到新的关键字`yield`。星号可以紧挨着`function`关键字，也可以在中间添加一个空格。
 
@@ -55,7 +55,7 @@ for(let x of collection){
 
 ## 高级迭代器功能
 
-## 给迭代器传递参数：给迭代器的`next()`方法传递参数，那么这个参数就会替代生成器内部上一条`yield`语句的返回值。第一次调用`next()`方法无论传入什么参数都会被丢弃。
+## 给迭代器传递参数：给迭代器的`next()`方法传递参数，那么这个参数就会替代生成器内部上一条`yield`语句的返回值。第一次调用`next()`方法无论传入什么参数都会被丢弃
 
 ```
 function *createIterator(){
@@ -94,7 +94,7 @@ console.log(iterator.throw(new Error("boom")));		//{value: 9, done: false}
 console.log(iterator.next());	//{value: undefined, done: true}
 ```
 
-## 生成器返回语句：`return`表示所有的操作已经完成，属性`done`被设置为`true`。
+## 生成器返回语句：`return`表示所有的操作已经完成，属性`done`被设置为`true`
 
 ## 委托生成器
 
