--- a/docs/深入理解ES6/9类.md
+++ b/docs/深入理解ES6/9类.md
@@ -93,7 +93,7 @@ let PersonType = (function () {
 
 可以传入函数，可以从函数返回，并且可以赋值给变量的值。
 
-## 访问器属性：
+## 访问器属性
 
 类支持直接在原型上定义访问器属性，创建 getter 时，需要在关键字 get 后紧跟一个空格和相应的标识符；创建 setter 时，只需把关键字 get 替换为 set 即可。
 
