--- a/docs/高程笔记/4章.md
+++ b/docs/高程笔记/4章.md
@@ -59,3 +59,21 @@ console.log(obj.name); //Gold
 
 - `try-catch` 中的 `catch` 语句，创建一个新的变量对象，该对象包含要抛出的错误对象的声明。
 - `with` 语句，向作用域链前端添加指定的对象。
+
+## 垃圾回收
+
+**_垃圾回收_** 指的是执行执行环境负责在代码执行时管理内存，无需开发者手动管理内存。JavaScript 是使用垃圾回收的语言。垃圾回收机制首先确定哪个变量不再使用，就释放它所占的内存。这个过程是 **周期性** 的。
+
+标记未使用变量的两种主要方式： **标记清理**、**引用计数**。
+
+### 标记清理
+
+**_标记清理_** 就是当变量进入上下文，则加上存在于上下文中的标记。当变量离开上下文，则加上离开上下文的标记。逻辑上来说，永远不清理存在于上下文中的变量。
+
+### 引用计数
+
+**_引用计数_** 就是对每个值都记录它被引用的次数，当一个值的引用数为 0 时，安全回收其内存。
+
+#### 循环引用
+
+**_引用计数_** 无法处理循环引用的情况，导致内存没有被回收。
